--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 *.out
 *.log
 *.aux
+
+
+
 *.synctex.gz
-ret/1/imagens/
 *.bld
 *.cmd_log
 *.lso
@@ -37,7 +39,22 @@ iseconfig/
 webtalk_pn.xml
 xlnx_auto_0_xdb/
 xst/
+
+
+
 *.BMP
 *.pdsbak
 *.pdsbak
 *.pdsprj.ArthurNote.*
+
+*.xmsgs
+*cmd
+*.jhd
+*.schlog
+*.vf
+*.exe
+*.wdb
+*.ini
+isim/
+sch2HdlBatchFile
+
